--- a/style.css
+++ b/style.css
@@ -52,21 +52,21 @@ header{
     max-width: 10rem;
 }
 .illustration{
-    max-width: 50rem;
+    max-width: 100%;
 
 }
 .flex{
     display:flex;
     flex-direction:column;
     align-items:center;
-    row-gap: 2rem;
+    row-gap: 1rem;
     margin-top:2rem;
 }
 .flex-item{
     display:flex;
     flex-direction: column;
     text-align:center;
-    max-width: 80%;
+    max-width: 45rem;
 }
 .btn{
     border:none;
@@ -111,10 +111,17 @@ footer{
         grid-template-columns: auto auto;
         justify-content: center;
         align-items:start;
-        margin-inline:4rem;
+        
+        
+    }
+    .illustration{
+        max-width: 100%;
+        
     }
     .flex-item{
         text-align:start;
+        padding:1.5rem;
+        
     }
     .flex-item h1{
         font-size: 2.5rem;
@@ -127,5 +134,11 @@ footer{
     }
     .btn{
         margin-left:0;
+    }
+    .item-1{
+        max-width:60rem;
+    }
+    .item-2{
+        max-width:40rem;
     }
 }
